--- a/apkTools_release/tools/generator/text_image_generator.html
+++ b/apkTools_release/tools/generator/text_image_generator.html
@@ -206,17 +206,17 @@
         .preview-canvas-wrapper {
             display: inline-block;
             border: 2px solid #dee2e6;
-            border-radius: 8px;
+            border-radius: var(--radius-sm);
             padding: 10px;
-            background: #f8f9fa;
+            background: var(--color-surface-alt);
             margin-bottom: 20px;
         }
 
         .preview-info {
             background: #e7f3ff;
             border-left: 4px solid #2196F3;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-bottom: 20px;
             font-size: 13px;
             color: #0c5460;
@@ -225,11 +225,11 @@
 
         .download-btn {
             background: #28a745;
-            color: white;
+            color: var(--color-text-on-primary);
             border: none;
             padding: 12px 24px;
-            border-radius: 8px;
-            font-size: 14px;
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-small);
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s;
@@ -252,7 +252,7 @@
             border: 2px solid #dee2e6;
             border-radius: 10px;
             padding: 6px;
-            background: #fff;
+            background: var(--color-surface);
             cursor: pointer;
             transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
             text-align: center;
@@ -292,8 +292,8 @@
             background: #fee;
             border-left-color: #dc3545;
             color: #721c24;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-top: 20px;
             display: none;
         }
@@ -306,8 +306,8 @@
             background: #d4edda;
             border-left-color: #28a745;
             color: #155724;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-top: 20px;
             display: none;
         }
