--- a/apkTools_release/tools/analyzer/apk_analyzer.html
+++ b/apkTools_release/tools/analyzer/apk_analyzer.html
@@ -132,7 +132,7 @@
             font-weight: 600;
             color: #495057;
             margin-bottom: 8px;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .result-value-wrapper {
@@ -146,7 +146,7 @@
             word-break: break-all;
             font-family: 'Courier New', monospace;
             font-size: 13px;
-            background: white;
+            background: var(--color-surface);
             padding: 10px;
             border-radius: 4px;
             border: 1px solid #dee2e6;
@@ -188,8 +188,8 @@
             background: #fee;
             border-left-color: #dc3545;
             color: #721c24;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-top: 20px;
             display: none;
         }
@@ -200,7 +200,7 @@
 
         .copy-btn {
             background: #667eea;
-            color: white;
+            color: var(--color-text-on-primary);
             border: none;
             padding: 8px 16px;
             border-radius: 6px;
@@ -233,7 +233,7 @@
             <div class="upload-area" id="uploadArea">
                 <div class="upload-icon">📦</div>
                 <div class="upload-text">点击选择文件或拖拽文件到此处</div>
-                <div style="font-size: 12px; color: #6c757d; margin-top: 10px;">支持格式：APK (.apk) | Keystore (.keystore) |
+                <div style="font-size: var(--font-size-small); color: #6c757d; margin-top: 10px;">支持格式：APK (.apk) | Keystore (.keystore) |
                     JKS (.jks)</div>
                 <input type="file" id="fileInput" class="file-input" accept=".apk,.keystore,.jks">
             </div>
