--- a/apkTools_release/tools/converter/color_converter.html
+++ b/apkTools_release/tools/converter/color_converter.html
@@ -97,7 +97,7 @@
     .color-preview {
       width: 100%;
       height: 120px;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       border: 2px solid #dee2e6;
       margin-top: 10px;
       background: #f0f0f0
@@ -112,7 +112,7 @@
     }
 
     .color-presets-group-title {
-      font-size: 16px;
+      font-size: var(--font-size-base);
       font-weight: 600;
       color: #495057;
       margin-bottom: 12px;
@@ -131,7 +131,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      background: #fff;
+      background: var(--color-surface);
       border: 1px solid #dee2e6;
       border-radius: 6px;
       padding: 8px;
@@ -191,11 +191,11 @@
 
     .btn {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none;
       padding: 12px 24px;
-      border-radius: 8px;
-      font-size: 14px;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
       font-weight: 600;
       cursor: pointer;
       transition: transform .2s
@@ -212,13 +212,13 @@
     }
 
     .result-display {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
+      border-radius: var(--radius-sm);
+      padding: var(--spacing-md);
       margin-top: 15px;
       font-family: 'Courier New', monospace;
-      font-size: 14px;
+      font-size: var(--font-size-small);
       word-break: break-all
     }
   </style>
