--- a/apkTools_release/tools/converter/currency_converter.html
+++ b/apkTools_release/tools/converter/currency_converter.html
@@ -126,9 +126,9 @@
       min-width: 150px;
       padding: var(--spacing-sm) var(--spacing-lg);
       border: 2px solid var(--color-border);
-      border-radius: 12px;
-      font-size: 16px;
-      background: #fff;
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-base);
+      background: var(--color-surface);
       cursor: pointer;
       transition: all 0.3s;
       font-weight: 500;
@@ -149,10 +149,10 @@
     .currency-select-input {
       width: 100%;
       padding: 14px 40px 14px 18px;
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
-      font-size: 16px;
-      background: #fff;
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-base);
+      background: var(--color-surface);
       transition: all 0.3s;
       font-weight: 500;
       cursor: pointer;
@@ -172,7 +172,7 @@
       transform: translateY(-50%);
       pointer-events: none;
       color: #667eea;
-      font-size: 14px;
+      font-size: var(--font-size-small);
       transition: transform 0.3s;
     }
 
@@ -185,9 +185,9 @@
       top: calc(100% + 8px);
       left: 0;
       right: 0;
-      background: #fff;
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
+      background: var(--color-surface);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
       box-shadow: 0 8px 24px rgba(0, 0, 0, .15);
       max-height: 300px;
       overflow-y: auto;
@@ -203,15 +203,15 @@
       width: 100%;
       padding: 12px 16px;
       border: none;
-      border-bottom: 2px solid #e9ecef;
+      border-bottom: 2px solid var(--color-border);
       border-radius: 12px 12px 0 0;
-      font-size: 14px;
-      background: #f8f9fa;
+      font-size: var(--font-size-small);
+      background: var(--color-surface-alt);
     }
 
     .currency-search-input:focus {
       outline: none;
-      background: #fff;
+      background: var(--color-surface);
       border-bottom-color: #667eea;
     }
 
@@ -235,7 +235,7 @@
     }
 
     .currency-option:hover {
-      background: #f8f9fa;
+      background: var(--color-surface-alt);
     }
 
     .currency-option.selected {
@@ -255,14 +255,14 @@
     }
 
     .currency-option-code {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       font-weight: 600;
-      color: #2d3748;
+      color: var(--color-text);
     }
 
     .currency-option-name {
-      font-size: 12px;
-      color: #718096;
+      font-size: var(--font-size-small);
+      color: var(--color-text-secondary);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -270,19 +270,19 @@
 
     .currency-option.highlight {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
     }
 
     .currency-option.highlight .currency-option-code,
     .currency-option.highlight .currency-option-name {
-      color: #fff;
+      color: var(--color-text-on-primary);
     }
 
     .currency-no-results {
       padding: 20px;
       text-align: center;
       color: #a0aec0;
-      font-size: 14px;
+      font-size: var(--font-size-small);
     }
 
     .arrow-icon {
@@ -297,9 +297,9 @@
 
     .result-display {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       padding: 20px 24px;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       text-align: center;
       min-height: 80px;
       display: flex;
@@ -321,7 +321,7 @@
     }
 
     .result-info {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       opacity: 0.9;
     }
 
@@ -331,7 +331,7 @@
       height: 20px;
       border: 3px solid rgba(255, 255, 255, 0.3);
       border-radius: 50%;
-      border-top-color: #fff;
+      border-top-color: var(--color-text-on-primary);
       animation: spin 1s ease-in-out infinite;
     }
 
@@ -357,7 +357,7 @@
 
     .rates-title {
       font-size: 22px;
-      color: #2d3748;
+      color: var(--color-text);
       font-weight: 700;
       display: flex;
       align-items: center;
@@ -369,11 +369,11 @@
       min-width: 250px;
       max-width: 400px;
       padding: 12px 20px;
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
       font-size: 15px;
       transition: all 0.3s;
-      background: #fff;
+      background: var(--color-surface);
     }
 
     .search-box:focus {
@@ -384,7 +384,7 @@
 
     .update-time {
       font-size: 13px;
-      color: #718096;
+      color: var(--color-text-secondary);
       text-align: right;
     }
 
@@ -393,9 +393,9 @@
     }
 
     .rates-list {
-      background: #fff;
-      border: 1px solid #e9ecef;
-      border-radius: 12px;
+      background: var(--color-surface);
+      border: 1px solid var(--color-border);
+      border-radius: var(--radius-md);
       overflow: visible;
       position: relative;
     }
@@ -405,11 +405,11 @@
       grid-template-columns: 60px 1fr 120px;
       gap: 16px;
       padding: 12px 16px;
-      background: #f8f9fa;
-      border-bottom: 2px solid #e9ecef;
-      font-size: 12px;
+      background: var(--color-surface-alt);
+      border-bottom: 2px solid var(--color-border);
+      font-size: var(--font-size-small);
       font-weight: 600;
-      color: #718096;
+      color: var(--color-text-secondary);
       text-transform: uppercase;
       letter-spacing: 0.5px;
     }
@@ -430,7 +430,7 @@
     }
 
     .rate-row:hover {
-      background: #f8f9fa;
+      background: var(--color-surface-alt);
       border-left: 3px solid #667eea;
     }
 
@@ -455,14 +455,14 @@
     }
 
     .rate-code {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       font-weight: 700;
-      color: #2d3748;
+      color: var(--color-text);
     }
 
     .rate-name {
-      font-size: 12px;
-      color: #718096;
+      font-size: var(--font-size-small);
+      color: var(--color-text-secondary);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -485,9 +485,9 @@
       position: sticky;
       top: 0;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       padding: 10px 16px;
-      font-size: 16px;
+      font-size: var(--font-size-base);
       font-weight: 700;
       z-index: 10;
       box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
@@ -524,7 +524,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 12px;
+      font-size: var(--font-size-small);
       font-weight: 600;
       color: #667eea;
       cursor: pointer;
@@ -535,13 +535,13 @@
 
     .alphabet-item:hover {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       transform: scale(1.1);
     }
 
     .alphabet-item.active {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       box-shadow: 0 2px 8px rgba(102, 126, 234, .4);
     }
 
@@ -571,7 +571,7 @@
       background: #fee;
       color: #c33;
       padding: 16px;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       margin-bottom: 20px;
       border: 1px solid #fcc;
       display: none;
@@ -607,7 +607,7 @@
       }
 
       .rate-value {
-        font-size: 14px;
+        font-size: var(--font-size-small);
       }
 
       .rates-header {
@@ -622,7 +622,7 @@
       .alphabet-indicator {
         right: 10px;
         padding: 8px 6px;
-        border-radius: 16px;
+        border-radius: var(--radius-lg);
       }
 
       .alphabet-item {
@@ -716,7 +716,7 @@
           </div>
         </div>
         <div class="no-results" id="noResults">
-          <div style="font-size: 18px; margin-bottom: 8px;">未找到相关货币</div>
+          <div style="font-size: var(--font-size-large); margin-bottom: 8px;">未找到相关货币</div>
           <div>试试其他关键词吧</div>
         </div>
       </div>
