--- a/apkTools_release/tools/converter/svg_converter.html
+++ b/apkTools_release/tools/converter/svg_converter.html
@@ -134,7 +134,7 @@
       border: none;
       padding: var(--spacing-sm) var(--spacing-xl);
       border-radius: var(--radius-sm);
-      font-size: 16px;
+      font-size: var(--font-size-base);
       font-weight: 600;
       cursor: pointer;
       transition: transform .2s;
@@ -223,7 +223,7 @@
     .preview-image {
       max-width: 100%;
       height: auto;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       background: #fafafa
     }
   </style>
