--- a/apkTools_release/tools/converter/timestamp_converter.html
+++ b/apkTools_release/tools/converter/timestamp_converter.html
@@ -91,17 +91,17 @@
       width: 100%;
       padding: 12px;
       border: 2px solid #dee2e6;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       font-size: 14px
     }
 
     .btn {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none;
       padding: 14px 35px;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
       font-weight: 600;
       cursor: pointer;
       transition: transform .2s;
@@ -126,9 +126,9 @@
     }
 
     .result-card {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       padding: 15px
     }
 
