--- a/apkTools_release/tools/developer/device_preview.html
+++ b/apkTools_release/tools/developer/device_preview.html
@@ -119,9 +119,9 @@
     }
 
     .brand-group {
-      background: #fff;
+      background: var(--color-surface);
       border: 1px solid #dee2e6;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       overflow: hidden
     }
 
@@ -130,7 +130,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 15px;
-      background: #f8f9fa;
+      background: var(--color-surface-alt);
       border-bottom: 1px solid #dee2e6;
       cursor: pointer;
       transition: background .2s
@@ -154,21 +154,21 @@
       height: 24px;
       border-radius: 4px;
       object-fit: contain;
-      background: #fff;
+      background: var(--color-surface);
       padding: 2px;
       border: 1px solid #dee2e6
     }
 
     .brand-group-count {
       color: #6c757d;
-      font-size: 12px;
+      font-size: var(--font-size-small);
       font-weight: normal;
       margin-left: 8px
     }
 
     .brand-group-toggle {
       color: #6c757d;
-      font-size: 18px;
+      font-size: var(--font-size-large);
       transition: transform .3s;
       user-select: none
     }
@@ -190,8 +190,8 @@
     }
 
     .device-card {
-      background: #f8f9fa;
-      border: 1px solid #e9ecef;
+      background: var(--color-surface-alt);
+      border: 1px solid var(--color-border);
       border-radius: 6px;
       padding: 8px;
       transition: all .2s;
@@ -217,7 +217,7 @@
       height: 20px;
       border-radius: 4px;
       object-fit: contain;
-      background: #fff;
+      background: var(--color-surface);
       padding: 2px;
       border: 1px solid #dee2e6;
       flex-shrink: 0;
@@ -230,7 +230,7 @@
     }
 
     .device-name {
-      font-size: 12px;
+      font-size: var(--font-size-small);
       font-weight: 600;
       color: #212529;
       margin-bottom: 2px;
@@ -305,7 +305,7 @@
 
     .loading {
       text-align: center;
-      padding: 40px;
+      padding: var(--spacing-xl);
       color: #6c757d
     }
 
@@ -331,10 +331,10 @@
 
     .update-time {
       text-align: center;
-      padding: 15px;
-      background: #f8f9fa;
-      border-radius: 8px;
-      font-size: 12px;
+      padding: var(--spacing-md);
+      background: var(--color-surface-alt);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
       color: #6c757d;
       margin-top: 20px
     }
@@ -371,8 +371,8 @@
     }
 
     .modal-content {
-      background: #fff;
-      border-radius: 16px;
+      background: var(--color-surface);
+      border-radius: var(--radius-lg);
       max-width: 900px;
       width: 100%;
       max-height: 90vh;
@@ -402,7 +402,7 @@
       justify-content: space-between;
       position: sticky;
       top: 0;
-      background: #fff;
+      background: var(--color-surface);
       z-index: 10
     }
 
@@ -419,7 +419,7 @@
       width: 32px;
       height: 32px;
       border: none;
-      background: #f8f9fa;
+      background: var(--color-surface-alt);
       border-radius: 50%;
       cursor: pointer;
       font-size: 20px;
@@ -431,7 +431,7 @@
     }
 
     .modal-close:hover {
-      background: #e9ecef;
+      background: var(--color-surface-alt);
       color: #212529
     }
 
@@ -447,7 +447,7 @@
     .device-image {
       max-width: 100%;
       max-height: 400px;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1)
     }
 
@@ -459,13 +459,13 @@
     }
 
     .detail-section {
-      background: #f8f9fa;
-      border-radius: 12px;
+      background: var(--color-surface-alt);
+      border-radius: var(--radius-md);
       padding: 15px
     }
 
     .detail-section-title {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       font-weight: 600;
       color: #667eea;
       margin-bottom: 12px;
@@ -499,14 +499,14 @@
     }
 
     .brand-website {
-      margin-top: 25px;
+      margin-top: var(--spacing-lg);
       padding-top: 20px;
       border-top: 2px solid #e9ecef;
       text-align: center
     }
 
     .brand-website-title {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       color: #6c757d;
       margin-bottom: 12px
     }
@@ -515,9 +515,9 @@
       display: inline-block;
       padding: 10px 20px;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       font-weight: 500;
       transition: all 0.3s
     }
