--- a/apkTools_release/tools/developer/image_compressor.html
+++ b/apkTools_release/tools/developer/image_compressor.html
@@ -131,7 +131,7 @@
 
     .file-upload-text {
       color: #495057;
-      font-size: 16px;
+      font-size: var(--font-size-base);
       margin-bottom: 10px
     }
 
@@ -142,11 +142,11 @@
 
     .btn {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none;
       padding: 14px 35px;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
       font-weight: 600;
       cursor: pointer;
       transition: transform .2s;
@@ -191,8 +191,8 @@
     .info-box {
       background: #e7f3ff;
       border-left: 4px solid #2196F3;
-      padding: 15px;
-      border-radius: 8px;
+      padding: var(--spacing-md);
+      border-radius: var(--radius-sm);
       margin-bottom: 20px;
       font-size: 13px;
       color: #0c5460
@@ -200,7 +200,7 @@
 
     .status-message {
       padding: 12px;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       margin-top: 15px;
       display: none
     }
@@ -260,14 +260,14 @@
     }
 
     .preview-card {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       padding: 12px
     }
 
     .preview-title {
-      font-size: 14px;
+      font-size: var(--font-size-small);
       color: #6c757d;
       margin-bottom: 8px
     }
@@ -275,12 +275,12 @@
     .preview-image {
       width: 100%;
       height: auto;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       box-shadow: 0 4px 12px rgba(0, 0, 0, .1)
     }
 
     .meta {
-      font-size: 12px;
+      font-size: var(--font-size-small);
       color: #6c757d;
       margin-top: 8px
     }
