--- a/apkTools_release/tools/developer/ip_query.html
+++ b/apkTools_release/tools/developer/ip_query.html
@@ -120,82 +120,82 @@
     }
 
     .btn-secondary {
-      background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%);
+      background: linear-gradient(135deg, var(--color-secondary) 0%, var(--color-primary-dark) 100%);
     }
 
     .result-section {
-      margin-top: 25px;
+      margin-top: var(--spacing-lg);
     }
 
     .result-card {
-      background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 20px;
-      border: 2px solid #e9ecef;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, .08);
+      background: var(--color-surface);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-bottom: var(--spacing-md);
+      border: 1px solid var(--color-border);
+      box-shadow: var(--shadow-sm);
     }
 
     .result-card h3 {
-      font-size: 18px;
-      color: #2d3748;
-      margin-bottom: 20px;
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-md);
       display: flex;
       align-items: center;
-      gap: 10px;
-      padding-bottom: 12px;
-      border-bottom: 2px solid #e9ecef;
+      gap: var(--spacing-sm);
+      padding-bottom: var(--spacing-sm);
+      border-bottom: 2px solid var(--color-border);
     }
 
     .result-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
+      gap: var(--spacing-md);
     }
 
     .result-item {
-      background: #fff;
-      padding: 15px;
-      border-radius: 8px;
-      border: 1px solid #e9ecef;
+      background: var(--color-surface-alt);
+      padding: var(--spacing-md);
+      border-radius: var(--radius-sm);
+      border: 1px solid var(--color-border);
     }
 
     .result-label {
-      font-size: 12px;
-      color: #718096;
-      font-weight: 600;
+      font-size: var(--font-size-small);
+      color: var(--color-text-secondary);
+      font-weight: var(--font-weight-semibold);
       text-transform: uppercase;
       letter-spacing: 0.5px;
-      margin-bottom: 6px;
+      margin-bottom: var(--spacing-xs);
     }
 
     .result-value {
-      font-size: 16px;
-      color: #2d3748;
-      font-weight: 600;
+      font-size: var(--font-size-base);
+      color: var(--color-text);
+      font-weight: var(--font-weight-semibold);
       word-break: break-all;
     }
 
     .result-value.empty {
-      color: #adb5bd;
+      color: var(--color-text-light);
       font-style: italic;
     }
 
     .loading {
       text-align: center;
-      padding: 40px;
-      color: #718096;
+      padding: var(--spacing-xl);
+      color: var(--color-text-secondary);
     }
 
     .loading-spinner {
       display: inline-block;
       width: 40px;
       height: 40px;
-      border: 4px solid #e9ecef;
-      border-top-color: #667eea;
+      border: 4px solid var(--color-border);
+      border-top-color: var(--color-primary);
       border-radius: 50%;
       animation: spin 1s linear infinite;
-      margin-bottom: 15px;
+      margin-bottom: var(--spacing-md);
     }
 
     @keyframes spin {
@@ -205,23 +205,24 @@
     }
 
     .error {
-      background: #fff5f5;
-      border-color: #fc8181;
-      color: #c53030;
-      padding: 15px;
-      border-radius: 8px;
-      margin-top: 15px;
+      background: var(--color-surface-alt);
+      border-color: var(--color-error);
+      color: var(--color-error);
+      padding: var(--spacing-md);
+      border-radius: var(--radius-sm);
+      margin-top: var(--spacing-md);
+      border: 2px solid var(--color-error);
     }
 
     .ip-badge {
       display: inline-block;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 6px 12px;
-      border-radius: 20px;
-      font-size: 14px;
-      font-weight: 600;
-      margin-left: 10px;
+      background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+      color: var(--color-text-on-primary);
+      padding: var(--spacing-xs) var(--spacing-sm);
+      border-radius: var(--radius-lg);
+      font-size: var(--font-size-small);
+      font-weight: var(--font-weight-semibold);
+      margin-left: var(--spacing-sm);
     }
 
     @media (max-width: 768px) {
