--- a/apkTools_release/tools/developer/keystore_generator.html
+++ b/apkTools_release/tools/developer/keystore_generator.html
@@ -145,18 +145,18 @@
         }
 
         .result-item {
-            background: #f8f9fa;
+            background: var(--color-surface-alt);
             border-left: 4px solid #667eea;
             padding: 15px 20px;
             margin-bottom: 15px;
-            border-radius: 8px;
+            border-radius: var(--radius-sm);
         }
 
         .result-label {
             font-weight: 600;
             color: #495057;
             margin-bottom: 8px;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .result-value-wrapper {
@@ -170,7 +170,7 @@
             word-break: break-all;
             font-family: 'Courier New', monospace;
             font-size: 13px;
-            background: white;
+            background: var(--color-surface);
             padding: 10px;
             border-radius: 4px;
             border: 1px solid #dee2e6;
@@ -214,8 +214,8 @@
             background: #fee;
             border-left-color: #dc3545;
             color: #721c24;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-top: 20px;
             display: none;
         }
@@ -228,8 +228,8 @@
             background: #d4edda;
             border-left-color: #28a745;
             color: #155724;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-top: 20px;
             display: none;
         }
@@ -240,7 +240,7 @@
 
         .copy-btn {
             background: #667eea;
-            color: white;
+            color: var(--color-text-on-primary);
             border: none;
             padding: 8px 16px;
             border-radius: 6px;
@@ -262,11 +262,11 @@
 
         .download-btn {
             background: #28a745;
-            color: white;
+            color: var(--color-text-on-primary);
             border: none;
             padding: 12px 24px;
-            border-radius: 8px;
-            font-size: 14px;
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-small);
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s;
@@ -282,8 +282,8 @@
         .info-box {
             background: #e7f3ff;
             border-left: 4px solid #2196F3;
-            padding: 15px;
-            border-radius: 8px;
+            padding: var(--spacing-md);
+            border-radius: var(--radius-sm);
             margin-bottom: 20px;
             font-size: 13px;
             color: #0c5460;
@@ -294,10 +294,10 @@
         }
 
         .history-item {
-            background: white;
+            background: var(--color-surface);
             border: 1px solid #dee2e6;
-            border-radius: 8px;
-            padding: 15px;
+            border-radius: var(--radius-sm);
+            padding: var(--spacing-md);
             margin-bottom: 10px;
             transition: all 0.2s;
         }
@@ -338,7 +338,7 @@
         }
 
         .history-details {
-            font-size: 12px;
+            font-size: var(--font-size-small);
             color: #6c757d;
         }
 
@@ -358,7 +358,7 @@
 
         .history-btn.download {
             background: #28a745;
-            color: white;
+            color: var(--color-text-on-primary);
         }
 
         .history-btn.download:hover {
@@ -367,7 +367,7 @@
 
         .history-btn.delete {
             background: #dc3545;
-            color: white;
+            color: var(--color-text-on-primary);
         }
 
         .history-btn.delete:hover {
@@ -376,7 +376,7 @@
 
         .history-btn.view {
             background: #667eea;
-            color: white;
+            color: var(--color-text-on-primary);
         }
 
         .history-btn.view:hover {
@@ -397,7 +397,7 @@
         .history-expand-icon {
             margin-left: 10px;
             transition: transform 0.3s;
-            font-size: 12px;
+            font-size: var(--font-size-small);
         }
 
         .history-item.expanded .history-expand-icon {
@@ -412,13 +412,13 @@
             width: 100%;
             padding: 12px;
             border: 2px solid #dee2e6;
-            border-radius: 8px;
-            font-size: 14px;
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-small);
         }
 
         .empty-history {
             text-align: center;
-            padding: 40px;
+            padding: var(--spacing-xl);
             color: #6c757d;
         }
     </style>
@@ -505,11 +505,11 @@
                     style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
                     <h2 style="margin: 0;">历史记录</h2>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                        <button class="history-btn" style="background: #28a745; color: white;"
+                        <button class="history-btn" style="background: #28a745; color: var(--color-text-on-primary);"
                             onclick="exportAllToProject()">导出所有到项目目录</button>
-                        <button class="history-btn" style="background: #17a2b8; color: white;"
+                        <button class="history-btn" style="background: #17a2b8; color: var(--color-text-on-primary);"
                             onclick="exportHistoryToFile()">导出元数据</button>
-                        <button class="history-btn" style="background: #6c757d; color: white;"
+                        <button class="history-btn" style="background: #6c757d; color: var(--color-text-on-primary);"
                             onclick="importHistoryFromFile()">导入历史</button>
                     </div>
                 </div>
