--- a/apkTools_release/tools/developer/string_encryptor.html
+++ b/apkTools_release/tools/developer/string_encryptor.html
@@ -165,15 +165,15 @@
     }
 
     .result-area {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
+      border-radius: var(--radius-sm);
+      padding: var(--spacing-md);
       min-height: 120px;
       word-break: break-all;
       white-space: pre-wrap;
       font-family: 'Courier New', monospace;
-      font-size: 14px;
+      font-size: var(--font-size-small);
       user-select: text;
       -webkit-user-select: text;
       -moz-user-select: text;
@@ -182,9 +182,9 @@
 
     .input-box-wrapper,
     .output-box-wrapper {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       padding: 20px;
       display: flex;
       flex-direction: column;
@@ -203,7 +203,7 @@
     .output-box-wrapper .result-area {
       flex: 1;
       min-height: 250px;
-      border: 1px solid #e9ecef;
+      border: 1px solid var(--color-border);
       border-radius: 8px
     }
 
@@ -247,7 +247,7 @@
 
     .btn-encrypt {
       background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none
     }
 
@@ -259,7 +259,7 @@
 
     .btn-decrypt {
       background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none
     }
 
@@ -284,11 +284,11 @@
     }
 
     .tab-btn {
-      background: #e9ecef;
+      background: var(--color-surface-alt);
       color: #495057;
       border: 2px solid #dee2e6;
       padding: 10px 20px;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       cursor: pointer;
       font-weight: 600;
       transition: all .2s
@@ -296,7 +296,7 @@
 
     .tab-btn.active {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border-color: #667eea
     }
 
@@ -310,7 +310,7 @@
 
     .info-text {
       color: #6c757d;
-      font-size: 12px;
+      font-size: var(--font-size-small);
       margin-top: 5px
     }
   </style>
