--- a/apkTools_release/tools/generator/icon_factory.html
+++ b/apkTools_release/tools/generator/icon_factory.html
@@ -129,8 +129,8 @@
       color: var(--color-text-on-primary);
       border: none;
       padding: 14px 35px;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
       font-weight: 600;
       cursor: pointer;
       transition: transform .2s;
@@ -190,9 +190,9 @@
     }
 
     .preview-card {
-      background: #fff;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 12px;
+      border-radius: var(--radius-md);
       padding: 12px;
       text-align: center
     }
@@ -206,9 +206,9 @@
     .preview-image {
       width: 96px;
       height: 96px;
-      border-radius: 16px;
+      border-radius: var(--radius-lg);
       object-fit: contain;
-      background: #f8f9fa;
+      background: var(--color-surface-alt);
       border: 1px dashed #e9ecef
     }
 
