--- a/apkTools_release/tools/generator/launch_image_generator.html
+++ b/apkTools_release/tools/generator/launch_image_generator.html
@@ -138,23 +138,23 @@
 
     .file-upload-text {
       color: #495057;
-      font-size: 16px;
+      font-size: var(--font-size-base);
       margin-bottom: 10px;
     }
 
     .file-upload-hint {
       color: #6c757d;
-      font-size: 12px;
+      font-size: var(--font-size-small);
     }
 
     .preview-section {
-      margin-top: 25px;
+      margin-top: var(--spacing-lg);
     }
 
     .preview-image {
       max-width: 100%;
       max-height: 400px;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       margin-bottom: 15px;
       display: block;
@@ -171,12 +171,12 @@
       top: 10px;
       right: 10px;
       background: rgba(220, 53, 69, 0.9);
-      color: white;
+      color: var(--color-text-on-primary);
       border: none;
       border-radius: 50%;
       width: 36px;
       height: 36px;
-      font-size: 18px;
+      font-size: var(--font-size-large);
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -200,8 +200,8 @@
       flex: 1;
       padding: 12px;
       border: 2px solid #dee2e6;
-      border-radius: 8px;
-      background: white;
+      border-radius: var(--radius-sm);
+      background: var(--color-surface);
       cursor: pointer;
       text-align: center;
       font-weight: 600;
@@ -211,7 +211,7 @@
 
     .platform-tab.active {
       background: #667eea;
-      color: white;
+      color: var(--color-text-on-primary);
       border-color: #667eea;
     }
 
@@ -227,10 +227,10 @@
     }
 
     .size-item {
-      background: white;
+      background: var(--color-surface);
       border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
+      border-radius: var(--radius-sm);
+      padding: var(--spacing-md);
       text-align: center;
       transition: all 0.3s;
     }
@@ -252,7 +252,7 @@
     }
 
     .size-dimensions {
-      font-size: 12px;
+      font-size: var(--font-size-small);
       color: #6c757d;
       margin-bottom: 10px;
     }
@@ -266,8 +266,8 @@
     .btn {
       padding: 12px 24px;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
       font-weight: 600;
       cursor: pointer;
       transition: all 0.3s;
@@ -276,7 +276,7 @@
 
     .btn-primary {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      color: var(--color-text-on-primary);
     }
 
     .btn-primary:hover {
@@ -292,7 +292,7 @@
 
     .btn-secondary {
       background: #6c757d;
-      color: white;
+      color: var(--color-text-on-primary);
     }
 
     .btn-secondary:hover {
@@ -315,7 +315,7 @@
       width: 60px;
       height: 40px;
       border: 2px solid #dee2e6;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       cursor: pointer;
     }
 
@@ -329,7 +329,7 @@
 
     .status-message {
       padding: 12px;
-      border-radius: 8px;
+      border-radius: var(--radius-sm);
       margin-top: 15px;
       display: none;
     }
@@ -411,7 +411,7 @@
 
     .preview-item-label {
       margin-top: 8px;
-      font-size: 12px;
+      font-size: var(--font-size-small);
       color: #6c757d;
     }
 
@@ -461,7 +461,7 @@
       top: 20px;
       right: 20px;
       background: rgba(255, 255, 255, 0.2);
-      color: white;
+      color: var(--color-text-on-primary);
       border: 2px solid white;
       border-radius: 50%;
       width: 50px;
