--- a/apkTools_release/tools/analyzer/apk_analyzer.html
+++ b/apkTools_release/tools/analyzer/apk_analyzer.html
@@ -233,7 +233,7 @@
             <div class="upload-area" id="uploadArea">
                 <div class="upload-icon">📦</div>
                 <div class="upload-text">点击选择文件或拖拽文件到此处</div>
-                <div style="font-size: var(--font-size-small); color: #6c757d; margin-top: 10px;">支持格式：APK (.apk) | Keystore (.keystore) |
+                <div style="font-size: var(--font-size-small); color: var(--color-text-secondary); margin-top: 10px;">支持格式：APK (.apk) | Keystore (.keystore) |
                     JKS (.jks)</div>
                 <input type="file" id="fileInput" class="file-input" accept=".apk,.keystore,.jks">
             </div>
