--- a/apkTools_release/tools/converter/timestamp_converter.html
+++ b/apkTools_release/tools/converter/timestamp_converter.html
@@ -142,7 +142,7 @@
     .result-card-value {
       font-family: 'Courier New', monospace;
       font-size: 13px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       word-break: break-all
     }
 
