--- a/apkTools_release/tools/developer/image_compressor.html
+++ b/apkTools_release/tools/developer/image_compressor.html
@@ -136,7 +136,7 @@
     }
 
     .file-upload-hint {
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-size: 12px
     }
 
@@ -268,7 +268,7 @@
 
     .preview-title {
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-bottom: 8px
     }
 
@@ -281,7 +281,7 @@
 
     .meta {
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-top: 8px
     }
   </style>
