--- a/apkTools_release/tools/developer/keystore_generator.html
+++ b/apkTools_release/tools/developer/keystore_generator.html
@@ -339,7 +339,7 @@
 
         .history-details {
             font-size: var(--font-size-small);
-            color: #6c757d;
+            color: var(--color-text-secondary);
         }
 
         .history-actions {
@@ -419,7 +419,7 @@
         .empty-history {
             text-align: center;
             padding: var(--spacing-xl);
-            color: #6c757d;
+            color: var(--color-text-secondary);
         }
     </style>
 </head>
