--- a/apkTools_release/tools/developer/string_encryptor.html
+++ b/apkTools_release/tools/developer/string_encryptor.html
@@ -309,7 +309,7 @@
     }
 
     .info-text {
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-small);
       margin-top: 5px
     }
