--- a/apkTools_release/tools/formatter/json_to_model.html
+++ b/apkTools_release/tools/formatter/json_to_model.html
@@ -367,7 +367,7 @@
       <div id="messageArea"></div>
 
       <div class="result-section" id="resultSection" style="display: none;">
-        <h3>生成的代码 <span style="font-size: var(--font-size-small); font-weight: normal; color: #6c757d;" id="langName"></span></h3>
+        <h3>生成的代码 <span style="font-size: var(--font-size-small); font-weight: normal; color: var(--color-text-secondary);" id="langName"></span></h3>
         <div class="code-output" id="codeOutput"></div>
       </div>
     </div>
