--- a/apkTools_release/tools/generator/launch_image_generator.html
+++ b/apkTools_release/tools/generator/launch_image_generator.html
@@ -143,7 +143,7 @@
     }
 
     .file-upload-hint {
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-small);
     }
 
@@ -253,7 +253,7 @@
 
     .size-dimensions {
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-bottom: 10px;
     }
 
@@ -412,7 +412,7 @@
     .preview-item-label {
       margin-top: 8px;
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
     }
 
     .preview-item canvas {
@@ -520,7 +520,7 @@
       <div class="form-section">
         <h2>🎨 填充说明</h2>
         <div class="form-group">
-          <small style="color: #6c757d;">工具会自动检测图片边缘的主要颜色，并使用该颜色填充空白区域，确保图片内容居中且不变形。</small>
+          <small style="color: var(--color-text-secondary);">工具会自动检测图片边缘的主要颜色，并使用该颜色填充空白区域，确保图片内容居中且不变形。</small>
         </div>
       </div>
 
