--- a/apkTools_release/tools/generator/string_generator.html
+++ b/apkTools_release/tools/generator/string_generator.html
@@ -281,7 +281,7 @@
           <div class="form-group">
             <label>包名层级（2-4，包含 com）</label>
             <input type="number" id="packageLevel" value="3" min="2" max="4">
-            <small style="color: #6c757d; font-size: var(--font-size-small);">包名以 com. 开头，此数值为总层级数</small>
+            <small style="color: var(--color-text-secondary); font-size: var(--font-size-small);">包名以 com. 开头，此数值为总层级数</small>
           </div>
           <div class="form-group">
             <label>每段长度（3-10）</label>
