--- a/apkTools_release/tools/analyzer/api_debugger.html
+++ b/apkTools_release/tools/analyzer/api_debugger.html
@@ -168,7 +168,7 @@
       border-bottom: 3px solid transparent;
       cursor: pointer;
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       transition: all .2s;
       white-space: nowrap
     }
@@ -211,7 +211,7 @@
       border-bottom: 2px solid transparent;
       cursor: pointer;
       font-size: 13px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       transition: all .2s;
       white-space: nowrap
     }
@@ -291,7 +291,7 @@
 
     .file-name {
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -319,7 +319,7 @@
       display: flex;
       gap: 5px;
       align-items: center;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       background: none;
       border: none;
       cursor: pointer;
@@ -389,8 +389,7 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      color: #6c757d
-    }
+      color: var(--color-text-secondary); }
 
     .empty-response-icon {
       font-size: 48px;
@@ -445,7 +444,7 @@
       border: none;
       font-size: 24px;
       cursor: pointer;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       width: 30px;
       height: 30px;
       display: flex;
@@ -480,7 +479,7 @@
       border-bottom: 2px solid transparent;
       cursor: pointer;
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       transition: all .2s
     }
 
@@ -496,7 +495,7 @@
       border-radius: 6px;
       margin-bottom: 15px;
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       line-height: 1.6
     }
 
@@ -647,7 +646,7 @@
           </div>
 
           <div id="bodyContent">
-            <div id="bodyNone" style="padding: var(--spacing-xl); text-align: center; color: #6c757d; display: block;">
+            <div id="bodyNone" style="padding: var(--spacing-xl); text-align: center; color: var(--color-text-secondary); display: block;">
               该请求没有 Body
             </div>
 
@@ -1301,15 +1300,15 @@
             <button class="modal-close" onclick="this.closest('.modal').remove()">&times;</button>
           </div>
           <div class="modal-body" style="max-height: 500px; overflow-y: auto;">
-            ${requestHistory.length === 0 ? '<p style="text-align: center; color: #6c757d; padding: var(--spacing-xl);">暂无历史记录</p>' : ''}
+            ${requestHistory.length === 0 ? '<p style="text-align: center; color: var(--color-text-secondary); padding: var(--spacing-xl);">暂无历史记录</p>' : ''}
             ${requestHistory.map((item, index) => `
               <div style="padding: var(--spacing-md); margin-bottom: 10px; background: var(--color-surface-alt); border-radius: var(--radius-sm); border-left: 3px solid #667eea; cursor: pointer;" onclick="loadHistoryItem(${index})">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
                   <span style="display: inline-block; padding: 4px 12px; background: ${getMethodColor(item.method)}; color: var(--color-text-on-primary); border-radius: 4px; font-size: var(--font-size-small); font-weight: 600;">${item.method}</span>
-                  <span style="font-size: 11px; color: #6c757d;">${new Date(item.timestamp).toLocaleString()}</span>
+                  <span style="font-size: 11px; color: var(--color-text-secondary);">${new Date(item.timestamp).toLocaleString()}</span>
                 </div>
                 <div style="font-size: 13px; color: #495057; margin-bottom: 5px;">${item.url}</div>
-                <div style="font-size: var(--font-size-small); color: #6c757d;">状态: ${item.status} ${item.statusText || ''}</div>
+                <div style="font-size: var(--font-size-small); color: var(--color-text-secondary);">状态: ${item.status} ${item.statusText || ''}</div>
               </div>
             `).join('')}
           </div>
@@ -1546,7 +1545,7 @@
       if (Object.keys(headers).length > 0) {
         html += '<div style="margin-bottom: 15px; padding-bottom: 15px; border-bottom: 1px solid #dee2e6;"><strong style="font-size: var(--font-size-small); color: #495057;">响应头：</strong><br>';
         Object.entries(headers).forEach(([key, value]) => {
-          html += `<div style="font-size: var(--font-size-small); color: #6c757d; margin: 5px 0;">${key}: ${value}</div>`;
+          html += `<div style="font-size: var(--font-size-small); color: var(--color-text-secondary); margin: 5px 0;">${key}: ${value}</div>`;
         });
         html += '</div>';
       }
