--- a/apkTools_release/tools/converter/color_converter.html
+++ b/apkTools_release/tools/converter/color_converter.html
@@ -183,7 +183,7 @@
 
     .color-card-values {
       font-size: 10px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       line-height: 1.4;
       white-space: normal;
       word-break: break-word
