--- a/apkTools_release/tools/developer/device_preview.html
+++ b/apkTools_release/tools/developer/device_preview.html
@@ -160,14 +160,14 @@
     }
 
     .brand-group-count {
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-small);
       font-weight: normal;
       margin-left: 8px
     }
 
     .brand-group-toggle {
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-large);
       transition: transform .3s;
       user-select: none
@@ -245,7 +245,7 @@
 
     .device-model {
       font-size: 10px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -268,7 +268,7 @@
 
     .info-label {
       font-size: 9px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-bottom: 1px
     }
 
@@ -290,8 +290,7 @@
     .empty-state {
       text-align: center;
       padding: 60px 20px;
-      color: #6c757d
-    }
+      color: var(--color-text-secondary); }
 
     .empty-state-icon {
       font-size: 64px;
@@ -306,8 +305,7 @@
     .loading {
       text-align: center;
       padding: var(--spacing-xl);
-      color: #6c757d
-    }
+      color: var(--color-text-secondary); }
 
     .loading-spinner {
       border: 4px solid #f3f3f3;
@@ -335,7 +333,7 @@
       background: var(--color-surface-alt);
       border-radius: var(--radius-sm);
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-top: 20px
     }
 
@@ -423,7 +421,7 @@
       border-radius: 50%;
       cursor: pointer;
       font-size: 20px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -486,7 +484,7 @@
 
     .detail-label {
       font-size: 13px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       font-weight: 500
     }
 
@@ -507,7 +505,7 @@
 
     .brand-website-title {
       font-size: var(--font-size-small);
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-bottom: 12px
     }
 
