--- a/apkTools_release/tools/generator/icon_factory.html
+++ b/apkTools_release/tools/generator/icon_factory.html
@@ -199,7 +199,7 @@
 
     .preview-title {
       font-size: 13px;
-      color: #6c757d;
+      color: var(--color-text-secondary);
       margin-bottom: 8px
     }
 
